# MathMLData

./: .gitignore  LICENSE  Nemeth_charmap.txt  README_EVALUATION.md  UEB_charmap.txt  compare-mathml-in-csv.py  compare_mathML_files.py  compare_mathml_in_csv.py  create_test_dataset.py  exploratory_data_analysis.ipynb  extract_characters.py  extract_rust_test_data.py  from_ueb_analysis.ipynb  libmathcat_py.pyd  nemeth_mathml_evaluation_results.csv  nemeth_to_mathml_evaluation.py  pyproject.toml  to_nemeth_analysis.ipynb  use_gemini.py
BrailleData/: histogram.py  histogram_output.xlsx  libmathcat_py.pyd  mml2brl.py  py.ini
RustTestData/: Nemeth-cnclz.mmls  Nemeth.brls  Nemeth.mmls  UEB-cnclz.mmls  UEB.mmls
SimpleSpeakData/: csv-stats.py  mmls2csv.py  remove-duplicates.py  scrape_site.py
analysis/: analysis_utils.py  from_ueb_analysis.ipynb  to_nemeth_analysis.ipynb
example_data/: canonical-mathml.mmls  mathml.mmls  nemeth.brls  ueb.brls
results/: from-Nemeth-gemini-2.5-pro-0exs-200tests.txt  from-Nemeth-gemini-2.5-pro-0exs-2160tests.txt  from-Nemeth-gemini-2.5-pro-1138exs-200tests.txt  from-Nemeth-gemini-2.5-pro-312exs-200tests.txt  from-Nemeth-gemini-3-pro-preview-0exs-200tests.txt  from-Nemeth-gemini-3-pro-preview-10311exs-200tests.txt  from-Nemeth-gemini-3-pro-preview-2473exs-200tests.txt  from-Nemeth-gemini-3-pro-preview-312exs-200tests.txt  from-Nemeth-gemini-3-pro-preview-312exs-2160tests.txt  from-UEB-gemini-2.5-pro-0exs-200tests.txt  from-UEB-gemini-2.5-pro-192exs-200tests.txt  from-UEB-gemini-2.5-pro-892exs-200tests.txt  (+33 more)
test_data/: canonical-mathml.mmls  (+3 more)
(+718 files in other folders)
