[project]
name = "mathml-data-evaluation"
version = "0.1.0"
description = "Nemeth Braille to MathML translation evaluation using GPT-5.2"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
]
